add working dapr grpc sample

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,42 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
+            "name": "Launch ApiGateway",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/WeatherMicroservice/bin/Debug/net5.0/WeatherMicroservice.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/WeatherMicroservice",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        {
+            "name": "Launch ApiGateway with Dapr",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "daprd-debug",
+            "program": "${workspaceFolder}/ApiGeteway/bin/Debug/net5.0/ApiGeteway.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/ApiGeteway",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "postDebugTask": "daprd-down"
+        },
+        {
+            "name": "Launch WeatherMicroservice",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -19,16 +54,31 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
             }
+        },
+        {
+            "name": "Launch WeatherMicroservice with Dapr",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "daprd-debug",
+            "program": "${workspaceFolder}/WeatherMicroservice/bin/Debug/net5.0/WeatherMicroservice.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/WeatherMicroservice",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "postDebugTask": "daprd-down"
         },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}"
-        }
+        },
     ]
 }
