--- a/WeatherMicroservice/WeatherMicroservice.csproj
+++ b/WeatherMicroservice/WeatherMicroservice.csproj
@@ -9,6 +9,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapr.AspNetCore" Version="1.0.0-rc02" />
+        <PackageReference Include="Dapr.Client" Version="1.0.0-rc02" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.32.0" />
     </ItemGroup>
 
