--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/ApiGeteway/ApiGeteway.csproj",
+                "${workspaceFolder}/placeme-dapr-example.sln",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/ApiGeteway/ApiGeteway.csproj",
+                "${workspaceFolder}/placeme-dapr-example.sln",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,7 +32,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/ApiGeteway/ApiGeteway.csproj",
+                "${workspaceFolder}/placeme-dapr-example.sln",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -42,8 +42,7 @@
             "appId": "api-gateway",
             "appPort": 5000,
             "label": "daprd-debug",
-            "type": "daprd",
-            "dependsOn": "build"
+            "type": "daprd"
         },
         {
             "appId": "api-gateway",
