--- a/WeatherMicroservice/appsettings.json
+++ b/WeatherMicroservice/appsettings.json
@@ -8,8 +8,15 @@
   },
   "AllowedHosts": "*",
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://localhost:5001"
+      },
+      "WebApi": {
+        "Protocols": "Http1",
+        "Url": "http://localhost:5002"
+      }
     }
   }
 }
