add dockerfiel to WeatherService

--- a/WeatherMicroservice/appsettings.json
+++ b/WeatherMicroservice/appsettings.json
@@ -11,11 +11,11 @@
     "Endpoints": {
       "Grpc": {
         "Protocols": "Http2",
-        "Url": "http://localhost:5001"
+        "Url": "http://*:5001"
       },
       "WebApi": {
         "Protocols": "Http1",
-        "Url": "http://localhost:5002"
+        "Url": "http://*:5002"
       }
     }
   }
