--- a/ApiGeteway/ApiGeteway.csproj
+++ b/ApiGeteway/ApiGeteway.csproj
@@ -12,6 +12,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Serilog" Version="2.10.1-dev-01265" />
+        <PackageReference Include="Serilog.AspNetCore" Version="3.4.1-dev-00188" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
+        <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.5.0-alpha0003" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
     
