--- a/WeatherMicroservice/WeatherMicroservice.csproj
+++ b/WeatherMicroservice/WeatherMicroservice.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Grpc.AspNetCore" Version="2.32.0" />
         <PackageReference Include="MediatR" Version="9.0.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Serilog" Version="2.10.1-dev-01265" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.4.1-dev-00188" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
