--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "ApiGeteway": {
+    "ApiGateway": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
