--- a/Placeme.Infrastructure/Placeme.Infrastructure.csproj
+++ b/Placeme.Infrastructure/Placeme.Infrastructure.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Serilog" Version="2.10.1-dev-01265" />
       <PackageReference Include="Serilog.Enrichers.Span" Version="1.1.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
