--- a/Docker/Dockerfile.api
+++ b/Docker/Dockerfile.api
@@ -1,10 +1,10 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0.102-ca-patch-buster-slim AS build
 WORKDIR /src
 COPY *.sln .
 COPY Placeme.Infrastructure/*.csproj ./Placeme.Infrastructure/
 COPY ApiGateway/*.csproj ./ApiGateway/
+
 RUN dotnet restore ApiGateway/*.csproj
-RUN dotnet restore Placeme.Infrastructure/*.csproj
 
 COPY ./Placeme.Infrastructure ./Placeme.Infrastructure
 COPY ./ApiGateway ./ApiGateway
