--- a/Docker/Dockerfile.weather
+++ b/Docker/Dockerfile.weather
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0.102-ca-patch-buster-slim AS build
 WORKDIR /src
 COPY *.sln .
 COPY Placeme.Infrastructure/*.csproj ./Placeme.Infrastructure/
