--- a/WeatherMicroservice/appsettings.Development.json
+++ b/WeatherMicroservice/appsettings.Development.json
@@ -1,2 +1,9 @@
 {
+    "Logging": {
+        "Console": {
+            "LogLevel": {
+                "Default": "Information"
+            }
+        }
+    }
 }
